--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "jmc-project-official",
   "version": "0.1.0",
+  "homepage": "https://www.jmc-dp.com.br",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
