--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,11 +1,10 @@
 name: jmc-dp.com.br
-on:
-  push:
-    branches:
-      - main
+on: push
 jobs:
   build:
     runs-on: ubuntu-latest
+    branches:
+      - main
     steps:
       - name: Checkout do repositorio
         uses: actions/checkout@v1
