--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,19 +5,20 @@ on:
       - main
       - develop
 jobs:
-  build:
+  prod-check:
     if: ${{ github.ref == 'main' }}
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout do repositorio
-        uses: actions/checkout@v1
-      - name: Deploy para meu hosting
-        uses: easingthemes/ssh-deploy@main
-        env:
-          SSH_PRIVATE_KEY: ${{secrets.SERVER_SSH_KEY}}
-          ARGS: "-rltgoDzvO --delete"
-          SOURCE: "build/"
-          REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
-          REMOTE_USER: ${{ secrets.REMOTE_USER }}
-          REMOTE_PORT: ${{ secrets.REMOTE_PORT }}
-          TARGET: ${{ secrets.REMOTE_TARGET }}
+    build:
+      runs-on: ubuntu-latest
+      steps:
+        - name: Checkout do repositorio
+          uses: actions/checkout@v1
+        - name: Deploy para meu hosting
+          uses: easingthemes/ssh-deploy@main
+          env:
+            SSH_PRIVATE_KEY: ${{secrets.SERVER_SSH_KEY}}
+            ARGS: "-rltgoDzvO --delete"
+            SOURCE: "build/"
+            REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
+            REMOTE_USER: ${{ secrets.REMOTE_USER }}
+            REMOTE_PORT: ${{ secrets.REMOTE_PORT }}
+            TARGET: ${{ secrets.REMOTE_TARGET }}
